Prevent horizontal content shift that was caused by loading icons.
The width of an image should be set on DOM element itself or as 'min-width' CSS property to be applied on loading phase.

--- a/src/popup-tab-switcher.scss
+++ b/src/popup-tab-switcher.scss
@@ -122,6 +122,9 @@
 .tab__icon {
   height: auto;
   width: var(--icon-size);
+  // Prevents jumping of the icon after image finished loading.
+  // The width property doesn't apply to the image when it is loading.
+  max-width: var(--icon-size);
   fill: var(--tab__icon-fill);
 
   &_noFavIcon {
